--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ SPOTIFY_CLIENT_ID=f0c3e7b40c1c4fee96a4ee4532e56d36
 SPOTIFY_CLIENT_SECRET=cd880481ba5e4f7d90b7608ab7fa241a
 DAUTH_CLIENT_ID=eoH-vVr-bpM-wCP4
 DAUTH_CLIENT_SECRET=VDE7e.bh_bw-wWdD~7-cooC7HfGS~3pz
-DAUTH_REDIRECT_URI=http://localhost:3000/dAuth/get-resource
+DAUTH_REDIRECT_URI=https://d-tunes.vercel.app/dAuth/get-resource
 JWT_SECRET_KEY=password123
